--- a/article.css
+++ b/article.css
@@ -18,6 +18,7 @@ html, body {
   height: 100%;
   padding: 20px;
   margin-bottom: 80px;
+  outline: 15px solid rgb(70,30,30);
 }
 
 #container {
@@ -36,20 +37,40 @@ header {
   font-size: 120%;
   background: rgba(70,30,30,0.9);
   height: auto;
+  transition: all .3s ease;
+}
+
+#title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  max-width: 70%;
+  font-size: 300%;
+  text-align: center;
+  transition: transform .3s ease;
+}
+
+@media (max-width: 800px) {
+  #title {
+    transform: translate(-50%, -20%);
+  }
 }
 
 /* CANVA STYLES */
 
 .canva {
-  margin: 20px 0;
+  top: 0px;
+  left: 0px;
+  margin: 40px 0;
   padding: 20px;
-  background: #222;
+  background: #050505;
   border-radius: 12px;
   color: #faa;
   cursor: pointer;
   position: static;
 
-  transition: 1s;
+  transition: all 0.6s ease-in-out;
 }
 
 .fullscreen {
@@ -61,6 +82,4 @@ header {
 
   margin: 0;
   border-radius: 0;
-
-  transition: all 0.6s ease-in-out;
 }
