red outline, parallax

--- a/article.css
+++ b/article.css
@@ -19,7 +19,7 @@ html, body {
   height: 100%;
   padding: 20px;
   margin-bottom: 80px;
-  outline: 15px solid rgb(70,30,30);
+  /* outline: 15px solid rgb(70,30,30); */
 }
 
 #container {
@@ -29,6 +29,7 @@ html, body {
   left: 0;
   height: 100%;
   width: 100%;
+  /* box-shadow: inset 0px 0px 15px 5px rgb(170, 70, 70); */
 }
 
 header {
