--- a/article.css
+++ b/article.css
@@ -7,8 +7,119 @@
 
 html, body {
   height: 100%;
-  background: #222;
+  background: rgba(21,20,18,1);
   color: #ddd;
+}
+
+html {
+  font-size: 100%;
+}
+
+body {
+  font-family: 'Open-sans', helvetica, sans-serif;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 740px;
+  padding: 0 10px;
+  width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+
+  line-height: 1.7;
+  margin: 1em 0 15px;
+  padding: 0;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h1 a {
+  color: inherit;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+p {
+  margin: 15px 0;
+}
+
+a {
+  color: blue;
+  text-decoration: none;
+	cursor: pointer;
+}
+
+a:hover, a:active {
+  color: blue;
+}
+
+ul, ol {
+  margin: 15px 0;
+  padding-left: 30px;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+ol ul, ul ol, ul ul, ol ol {
+  margin: 0;
+}
+
+ul ul, ol ul {
+  list-style-type: circle;
+}
+
+em, i {
+  font-style: italic;
+}
+
+strong, b {
+  font-weight: bold;
+}
+
+img {
+  max-width: 100%;
+}
+
+.gmnoprint img {
+  max-width: none;
+}
+
+.date {
+  font-style: italic;
+  color: gray;
+}
+
+/* Specify the color of the selection */
+::-moz-selection {
+  color: black;
+  background: lightGray;
+}
+
+::selection {
+  color: black;
+  background: lightGray;
 }
 
 /* HEADER STYLE */
@@ -40,10 +151,61 @@ header {
   font-size: 120%;
   height: auto;
   z-index: 10;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.site-avatar {
+  float: left;
+  width: 70px;
+  height: 70px;
+  margin-right: 20px;
+  opacity: 0.8;
+  filter: contrast(120%);
+}
+
+.site-avatar img {
+  border-radius: 5px;
+}
+
+.site-info {
+  float: left;
+}
+
+.site-name {
+  margin: 0;
+  cursor: pointer;
+  font-family: 'helvetica', sans-serif;
+  font-weight: 600;
+  font-size: 140%;
+  letter-spacing: 1px;
+}
+
+.site-description {
+  margin: -5px 0 0 0;
+  font-size: 16px;
+}
+
+nav {
+  float: right;
+  margin-top: 23px;
+  font-family: 'helvetica', sans-serif;
+  font-size: 18px;
+}
+
+nav a {
+  margin-left: 20px;
+  color: darkGray;
+  text-align: right;
+  font-weight: 300;
+  letter-spacing: 1px;
 }
 
 header.scrolled {
-  padding: 5px 20px 5px 5px;
+  padding: 0px 20px 0px 0px;
+  background: rgba(21,20,18,1);
 }
 
 header.scrolled .site-left .site-info .site-description {
@@ -68,16 +230,34 @@ header.scrolled .site-left .site-avatar {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -40%);
+  transform: translate(-50%, -50%);
   max-width: 70%;
   font-size: 300%;
   text-align: center;
   transition: transform .3s ease;
 }
 
+#title h1 {
+  font-size: 200%;
+  margin: 0;
+  line-height: 1.2;
+}
+
+#title p {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 200;
+  margin: 0;
+  color: #bbb;
+}
+
 @media (max-width: 800px) {
+  #container, #hero {
+    height: 400px;
+  }
+
   #title {
-    transform: translate(-50%, -20%);
+    font-size: 150%;
+    margin-top: 50px;
   }
 }
 
@@ -89,7 +269,7 @@ header.scrolled .site-left .site-avatar {
   margin: 40px 0;
   padding: 20px;
   min-height: 500px;
-  background: #050505;
+  background: #000;
   border-radius: 12px;
   color: #faa;
   z-index: 2;
