--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font: 18px helvetica;
+  font-family: 'Open-sans', helvetica, sans-serif;
 }
 
 .container {
@@ -19,6 +19,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
+  font-family: 'Poppins', sans-serif;
 
   line-height: 1.7;
   margin: 1em 0 15px;
